--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <title>Recetas.com</title>
+    <link rel="stylesheet" href="css/estilos.css">
     <header>
       <h1><img src="images/recetas.jpg" alt="Logo">Recetas.com</h1>
     </header>
   </head>
   <body>
-    <nav>
+    <nav id="menu-principal">
       <a href="#recetas_principales">Recetas principales</a> | <a href="#postres_latinos">Postres latinos</a>
     </nav>
     <article>
     <p>Bienvenido a nuestro sitio web sobre gastronomía latina, te invitamos a preparar nuestras recetas.</p>
-    <h2><strong>Nuevas Recetas</strong></h2>
-    <h3 id="recetas_principales">**Arroz criollo**</h3>
+    <h2 class="titulo"><strong>Nuevas Recetas</strong></h2>
+    <h3 id="recetas_principales" class="resaltado">**Arroz criollo**</h3>
     <p>Tiempo de preparación: <strong>45 minutos</strong> Número de porciones <strong>4</strong>
       <br>
       <h4><strong>Ingredientes</h4>
@@ -38,9 +39,9 @@
         <li>Mezclar todo, rectificar sal y dejar cocinar hasta que seque.</li>
         <li>Bajar el fuego, tapar la olla y continuar la cocción por 25 minutos más.</li>
       </ol>
-      Esta rica receta fue proporcionada por María Paula.
+      Esta rica receta fue proporcionada por <span class="resaltado">María Paula.</span>
     </p>
-    <h3 id="postres_latinos">**Arroz con leche**</h3>
+    <h3 id="postres_latinos" class="resaltado">**Arroz con leche**</h3>
     <p>Tiempo de preparación: <strong>30 minutos</strong> Número de porciones <strong>8</strong>
       <br>
       <h4><strong>Ingredientes</h4>
@@ -60,7 +61,7 @@
         <li>Cocinar por 25 minutos aproximadamente o hasta que este blando el arroz.</li>
         <li>Refrigerar por 3 horas y servir frío.</li>
       </ol>
-      Esta fácil receta es una contribución de Janeth Patricia.
+      Esta fácil receta es una contribución de <span class="resaltado">Janeth Patricia.</span>
     </p>
     </article>
   </body>
